# NoteHarbor

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
docs/: BUILDING.md  TESTING.md  USER_GUIDE.md
src/: App.tsx  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_manager.rs  lib.rs  main.rs  word_files.rs
src/components/: AppearancePopover.test.tsx  AppearancePopover.tsx  ConflictDialog.tsx  DeleteItemDialog.tsx  DocxPreview.test.tsx  DocxPreview.tsx  EditorPane.test.tsx  EditorPane.tsx  FolderContextMenu.test.tsx  FolderContextMenu.tsx  HelpCenter.test.tsx  HelpCenter.tsx  HoverTip.test.tsx  HoverTip.tsx  InlineTitleEditor.test.tsx  InlineTitleEditor.tsx  ItemContextMenu.test.tsx  ItemContextMenu.tsx  MarkdownPreview.tsx  ModeSwitcher.tsx  OnboardingTour.test.tsx  OnboardingTour.tsx  PdfPreview.tsx  RenameDialog.test.tsx  RenameDialog.tsx  RightPanel.tsx  SearchPalette.tsx  Sidebar.tsx
src/editor/: livePreview.ts
src/lib/: api.ts  appearance.test.ts  appearance.ts  help.test.ts  help.ts  markdown.test.ts  markdown.ts  platform.ts
