[package]
name = "noteharbor"
version = "0.3.2"
description = "墨岛笔记 - 本地优先的个人笔记与文档应用"
authors = ["NoteHarbor"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "noteharbor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
regex = "1"
trash = "5"
notify = "8"
pathdiff = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
